General Fixes
- Add missing yellow outline for fields with warnings
- message typo in spillover modal
- wrong validation for field target in spillover modal
- missing starting focus in spillover modal
- UI crash after upload failed file upload
- Focus indicator for links in tables is cut
- Change create bucket mixed spread policy to error (previously warning)
- Change edit bucket placement mixed policy to error  previously
warning)
- Fix issue regarding selected function in edit trigger modal
- missing starting focus in edit trigger modal

--- a/frontend/src/app/components/buckets/create-bucket-wizard/create-bucket-wizard.less
+++ b/frontend/src/app/components/buckets/create-bucket-wizard/create-bucket-wizard.less
@@ -17,9 +17,4 @@ create-bucket-wizard {
             vertical-align: middle;
         }
     }
-
-    .mixed-spread-warning {
-        .warning();
-        margin-top: -15px;
-    }
 }
