--- a/frontend/src/app/components/shared/dropdown/dropdown.less
+++ b/frontend/src/app/components/shared/dropdown/dropdown.less
@@ -36,6 +36,12 @@ dropdown {
         }
     }
 
+    &.warned .dd-summary:not(.disabled) {
+        &, &:focus {
+            border-color: @color11;
+        }
+    }
+
     .dd-chevron {
         position: absolute;
         top: 12px;
