--- a/frontend/src/app/styles/input.less
+++ b/frontend/src/app/styles/input.less
@@ -103,6 +103,10 @@
         border-color: @color10;
     }
 
+    &.warned, &:focus.warned, &.focus.warned {
+        border-color: @color11;
+    }
+
     &.no-validation-highlight.invalid,
     &.no-validation-highlight input.invalid {
         .no-validation-highlight();
